2006-06-04  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.c: Add Id.
	* src/wxterminal/gp_cairo.h: Likewise.
	* src/wxterminal/gp_cairo_term.h: Likewise.
	* src/wxterminal/wxt_gui.cpp: Likewise.
	* src/wxterminal/wxt_gui.h: Likewise.
	* src/wxterminal/wxt_plot.h: Likewise.
	* src/wxterminal/wxt_term.h: Likewise.

2006-06-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (two_edge_intersect) Remove old debugging code.

	* src/graphics.c (edge_intersect plot_filled_curves):  Bugfix.
	Fix clipping of filled curves. When a curve leaves the plot and 
	reenters via a different plot edge, we must add dummy points at the
	intervening plot corners.

	* src/graphics.c (fill_missing_corners): New routine to support
	clipping of filled areas defined by a bounding curve.

2006-06-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/unset.c (reset_command): Abandon the idea of automatic garbage
	collection for undefined user variables. The problem with this is that
	user-defined functions may still hold pointers to them for later use.
	E.g.:    f(x) = a+b; reset; print f(1)  - oops, no more a or b.
	Bugfix.

	* demo/world.dat: Rearrange line segments to make more continuous
	boundaries. Now it almost works for filledcurves.

2006-05-29  Michael Ritzert  <ritzert@t-online.de>

	* term/Makefile.am.in: Look for the postscript files to be installed
	relative to $(srcdir).

2006-05-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.c (clip_point): The code comments incorrectly described
	the bit values returned by clip_point().  

2006-05-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c:  Treat LT_AXIS linetype as dotted even if the
	terminal is 'set term x11 solid'.  Do not try to set dash type or
	linewidth for LT_BACKGROUND because this will underflow the type arrays.
	Bugfix.

	* share/Gnuplot.app-defaults:  Comment out settings for *ctrlq *raise